@@ -5,6 +5,7 @@ Isotope eCommerce Changelog
 Version 0.1.2 (2010-??-??)
 ------------------------------
 - Fixed: Backend variant listing showed unassigned attributes (Ticket #135)
+- Moved product tax class field to pricing legend (Ticket #134)
 
 Version 0.1.1 stable (2010-06-06)
 ------------------------------
